--- a/app/src/main/res/layout/activity_details_screen.xml
+++ b/app/src/main/res/layout/activity_details_screen.xml
@@ -9,8 +9,7 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/arrowLayout">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -83,7 +82,7 @@
                 android:layout_below="@id/cardview"
                 android:layout_marginTop="10dp"
                 android:padding="8dp"
-                android:text="Message......"
+                android:text="@string/message"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
 
@@ -95,156 +94,155 @@
                 android:layout_below="@+id/details"
                 android:layout_marginTop="12dp"
                 android:scaleType="centerCrop"
-                android:visibility="gone" />
+                android:visibility="invisible" />
 
+            <LinearLayout
+                android:id="@+id/arrowLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/image"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/arrowLeft"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:background="@drawable/item_selector"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_arrow_back_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/arrowRight"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/item_selector"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_arrow_forward_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/buttonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_below="@id/arrowLayout"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:background="@drawable/item_selector"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_delete_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/download"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:visibility="gone"
+                    android:background="@drawable/item_selector"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_margin="15dp"
+                        android:layout_gravity="center"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_cloud_download_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/copy"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:background="@drawable/item_selector"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_margin="15dp"
+                        android:layout_gravity="center"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_content_copy_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/translate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="15dp"
+                    android:background="@drawable/item_selector"
+                    android:layout_weight="1"
+                    app:cardBackgroundColor="@color/grey"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_gravity="center"
+                        android:layout_margin="15dp"
+                        app:tint="@color/LightBlue"
+                        android:src="@drawable/ic_baseline_translate_24" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
     </ScrollView>
-
-    <LinearLayout
-        android:id="@+id/arrowLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_above="@id/buttonLayout"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/arrowLeft"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:background="@drawable/item_selector"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:layout_margin="15dp"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_arrow_back_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/arrowRight"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:layout_weight="1"
-            android:background="@drawable/item_selector"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="center"
-                android:layout_margin="15dp"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_arrow_forward_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/buttonLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/delete"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:background="@drawable/item_selector"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:layout_margin="15dp"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_delete_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/download"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:visibility="gone"
-            android:background="@drawable/item_selector"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="15dp"
-                android:layout_gravity="center"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_cloud_download_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/copy"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:background="@drawable/item_selector"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_margin="15dp"
-                android:layout_gravity="center"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_content_copy_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/translate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:background="@drawable/item_selector"
-            android:layout_weight="1"
-            app:cardBackgroundColor="@color/grey"
-            android:layout_margin="5dp">
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center"
-                android:layout_margin="15dp"
-                app:tint="@color/LightBlue"
-                android:src="@drawable/ic_baseline_translate_24" />
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </LinearLayout>
-
 </RelativeLayout>
