--- a/app/src/main/res/layout/activity_feed_screen.xml
+++ b/app/src/main/res/layout/activity_feed_screen.xml
@@ -51,6 +51,8 @@
             android:padding="12sp"
             android:src="@drawable/ic_baseline_refresh_24"
             app:tint="@color/white"
+            android:focusable="true"
+            android:clickable="true"
             android:background="@drawable/refresh_selector" />
 
     </RelativeLayout>
