--- a/app/src/main/res/layout/activity_feed_screen.xml
+++ b/app/src/main/res/layout/activity_feed_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".clone.FeedScreen">
 
     <RelativeLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:orientation="vertical">
 
